src/test/deca/codegen/invalid/debordementModulu.deca
/* Description:
    Tester le débordement d'un modulu

    Historique:
      cree le 16/01/2020
    Sortie attendu:


*/
{
	int a = ((2147483647 + 1) % 0);
}
